--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Really Simple Algorithm Solutions</title>
+  <title>Simple Algorithm Solutions</title>
   <style>
     :root {
       --primary: #3b82f6;
@@ -1026,7 +1026,7 @@ int main(){
       const elem = document.getElementById(id);
       const isHidden = elem.style.display === "none" || elem.style.display === "";
       elem.style.display = isHidden ? "block" : "none";
-      
+
       const button = event.target;
       button.textContent = isHidden ? "Hide Explanation" : "Show Explanation";
     }
