--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Really Simple Algorithm Solutions</title>
+  <title>Simple Algorithm Solutions</title>
   <style>
     :root {
       --primary: #3b82f6;
@@ -145,7 +145,7 @@
 <body>
   <div class="header">
     <h1>Really Simple Algorithm Solutions</h1>
-    <p>The easiest (even if very inefficient) ways to solve each problem.</p>
+    <p>When Logic and Mind Breaks, Bruteforce Awakes.</p>
   </div>
   <nav class="problem-nav">
     <h3>Problems</h3>
